// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reformed HOC removes active flag and set touched flag on blur 1`] = `
<form>
  <span
    active={false}
    isDirty={false}
    touched={true}
  />
  <input
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé"
  />
  <span />
  <input
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé, Olé, Olé"
  />
  <span />
  <input
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Alternative image text"
  />
  <span
    active={false}
    isDirty={false}
    touched={true}
  />
  <input
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</form>
`;

exports[`reformed HOC sets active flag on focus 1`] = `
<form>
  <span
    active={true}
    isDirty={false}
  />
  <input
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé"
  />
  <span />
  <input
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé, Olé, Olé"
  />
  <span />
  <input
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Alternative image text"
  />
  <span
    active={true}
    isDirty={false}
  />
  <input
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</form>
`;

exports[`reformed HOC sets dirty flag in fields 1`] = `
<form>
  <span />
  <input
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé"
  />
  <span />
  <input
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé, Olé, Olé"
  />
  <span />
  <input
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Alternative image text"
  />
  <span />
  <input
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</form>
`;

exports[`reformed HOC sets dirty flag in fields 2`] = `
<form>
  <span
    isDirty={true}
  />
  <input
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Hombre"
  />
  <span />
  <input
    name="content"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Olé, Olé, Olé"
  />
  <span />
  <input
    name="image.alt"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Alternative image text"
  />
  <span
    isDirty={true}
  />
  <input
    name="image.caption"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="El Grande"
  />
</form>
`;
